remove margin left 10% on .contact-section as was causing overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,6 @@ footer ul {
 .contact-section {
     width: 95vw;
     height: 60vh;
-    margin-left: 10%;
     
 }
 
